--- a/index.html
+++ b/index.html
@@ -1,65 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>KMEDrive Globe Test</title>
-<style>
-  body { margin: 0; overflow: hidden; }
-  #globeViz { width: 100vw; height: 100vh; display: block; }
-</style>
+  <meta charset="UTF-8">
+  <title>KMEDrive Globe Test</title>
+  <style>
+    body { margin: 0; overflow: hidden; }
+    #globeViz { width: 100vw; height: 100vh; display: block; }
+  </style>
 </head>
 <body>
-<div id="globeViz"></div>
+  <div id="globeViz"></div>
 
-<!-- Globe.gl library (includes Three.js internally) -->
-<script src="https://unpkg.com/globe.gl"></script>
+  <!-- Globe.gl library (non-module version) -->
+  <script src="https://cdn.jsdelivr.net/npm/globe.gl@2.24.4/dist/globe.gl.min.js"></script>
 
-<script>
-  // Create the globe
-  const Globe = GlobeGL() // Correct capitalization!
-    .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
-    .showAtmosphere(true)
-    .pointOfView({ lat: 0, lng: 0, altitude: 2 });
+  <script>
+    // Create the globe
+    const Globe = GlobeGL()
+      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
+      .showAtmosphere(true)
+      .pointOfView({ lat: 0, lng: 0, altitude: 2 });
 
-  document.getElementById('globeViz').appendChild(Globe.renderer().domElement);
+    document.getElementById('globeViz').appendChild(Globe.renderer().domElement);
 
-  // Add a simple red cube
-  const car = new THREE.Mesh(
-    new THREE.BoxGeometry(0.02, 0.02, 0.02),
-    new THREE.MeshStandardMaterial({ color: 'red' })
-  );
+    // Create a red cube as a "car"
+    const car = new THREE.Mesh(
+      new THREE.BoxGeometry(0.02, 0.02, 0.02),
+      new THREE.MeshStandardMaterial({ color: 'red' })
+    );
+    Globe.scene().add(car);
 
-  Globe.scene().add(car);
+    // Initial cube position
+    let carLat = 0, carLng = 0;
 
-  // Initial position
-  let carLat = 0, carLng = 0;
+    // Move cube with arrow keys
+    document.addEventListener('keydown', e => {
+      const step = 0.5;
+      if(e.key==='ArrowUp') carLat += step;
+      if(e.key==='ArrowDown') carLat -= step;
+      if(e.key==='ArrowLeft') carLng -= step;
+      if(e.key==='ArrowRight') carLng += step;
 
-  // Arrow keys to move cube
-  document.addEventListener('keydown', e => {
-    const step = 0.5;
-    if(e.key==='ArrowUp') carLat += step;
-    if(e.key==='ArrowDown') carLat -= step;
-    if(e.key==='ArrowLeft') carLng -= step;
-    if(e.key==='ArrowRight') carLng += step;
+      // Convert lat/lng to 3D position on globe
+      const phi = (90 - carLat) * (Math.PI/180);
+      const theta = (carLng + 180) * (Math.PI/180);
+      const radius = 1;
+      car.position.x = -radius * Math.sin(phi) * Math.cos(theta);
+      car.position.y = radius * Math.cos(phi);
+      car.position.z = radius * Math.sin(phi) * Math.sin(theta);
+    });
 
-    const phi = (90 - carLat) * (Math.PI/180);
-    const theta = (carLng + 180) * (Math.PI/180);
-    const radius = 1;
-    car.position.x = -radius * Math.sin(phi) * Math.cos(theta);
-    car.position.y = radius * Math.cos(phi);
-    car.position.z = radius * Math.sin(phi) * Math.sin(theta);
-  });
+    // Add light so cube is visible
+    const light = new THREE.DirectionalLight(0xffffff, 1);
+    light.position.set(5,5,5);
+    Globe.scene().add(light);
 
-  // Add a light
-  const light = new THREE.DirectionalLight(0xffffff, 1);
-  light.position.set(5,5,5);
-  Globe.scene().add(light);
-
-  // Animate
-  (function animate(){
-    requestAnimationFrame(animate);
-    Globe.renderer().render(Globe.scene(), Globe.camera());
-  })();
-</script>
+    // Animate loop
+    (function animate(){
+      requestAnimationFrame(animate);
+      Globe.renderer().render(Globe.scene(), Globe.camera());
+    })();
+  </script>
 </body>
 </html>
