--- a/index.html
+++ b/index.html
@@ -2,64 +2,44 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>KMEDrive Globe Test</title>
+  <title>KMEDrive Cesium Globe</title>
+  <link href="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
   <style>
-    body { margin: 0; overflow: hidden; }
-    #globeViz { width: 100vw; height: 100vh; display: block; }
+    html, body, #cesiumContainer {
+      width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
+    }
   </style>
 </head>
 <body>
-  <div id="globeViz"></div>
+  <div id="cesiumContainer"></div>
 
-  <!-- Globe.gl library (non-module version) -->
-  <script src="https://cdn.jsdelivr.net/npm/globe.gl@2.24.4/dist/globe.gl.min.js"></script>
-
+  <script src="https://cesium.com/downloads/cesiumjs/releases/1.113/Build/Cesium/Cesium.js"></script>
   <script>
-    // Create the globe
-    const Globe = GlobeGL()
-      .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
-      .showAtmosphere(true)
-      .pointOfView({ lat: 0, lng: 0, altitude: 2 });
+    // Replace with your Cesium Ion token
+    Cesium.Ion.defaultAccessToken = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI2YzI2M2ZiZC02ODQ3LTQzMWYtYTgyNS0zYTY4YzA2ZjYzMjIiLCJpZCI6MzY1MzAwLCJpYXQiOjE3NjQ1Mzc2MjZ9.Fh8NohGnIuUmHU6b76s6eX0CmLJ1hwyNkTlr5HPdz6k';
 
-    document.getElementById('globeViz').appendChild(Globe.renderer().domElement);
-
-    // Create a red cube as a "car"
-    const car = new THREE.Mesh(
-      new THREE.BoxGeometry(0.02, 0.02, 0.02),
-      new THREE.MeshStandardMaterial({ color: 'red' })
-    );
-    Globe.scene().add(car);
-
-    // Initial cube position
-    let carLat = 0, carLng = 0;
-
-    // Move cube with arrow keys
-    document.addEventListener('keydown', e => {
-      const step = 0.5;
-      if(e.key==='ArrowUp') carLat += step;
-      if(e.key==='ArrowDown') carLat -= step;
-      if(e.key==='ArrowLeft') carLng -= step;
-      if(e.key==='ArrowRight') carLng += step;
-
-      // Convert lat/lng to 3D position on globe
-      const phi = (90 - carLat) * (Math.PI/180);
-      const theta = (carLng + 180) * (Math.PI/180);
-      const radius = 1;
-      car.position.x = -radius * Math.sin(phi) * Math.cos(theta);
-      car.position.y = radius * Math.cos(phi);
-      car.position.z = radius * Math.sin(phi) * Math.sin(theta);
+    // Create the Cesium Viewer
+    const viewer = new Cesium.Viewer('cesiumContainer', {
+      terrainProvider: Cesium.createWorldTerrain(),
+      timeline: false,
+      animation: false,
+      shouldAnimate: true
     });
 
-    // Add light so cube is visible
-    const light = new THREE.DirectionalLight(0xffffff, 1);
-    light.position.set(5,5,5);
-    Globe.scene().add(light);
+    // Optional: fly to initial location
+    viewer.camera.flyTo({
+      destination : Cesium.Cartesian3.fromDegrees(0, 0, 10000000) // over equator
+    });
 
-    // Animate loop
-    (function animate(){
-      requestAnimationFrame(animate);
-      Globe.renderer().render(Globe.scene(), Globe.camera());
-    })();
+    // Example: add a simple red box (like a car) at lat/lng
+    const redBox = viewer.entities.add({
+      name : 'Car',
+      position: Cesium.Cartesian3.fromDegrees(0, 0, 0),
+      box : {
+        dimensions : new Cesium.Cartesian3(500000.0, 500000.0, 500000.0),
+        material : Cesium.Color.RED
+      }
+    });
   </script>
 </body>
 </html>
