--- a/index.html
+++ b/index.html
@@ -1,43 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>KMEDrive Cesium Globe Test</title>
-  <link href="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
-  <style>
-    html, body, #cesiumContainer {
-      width: 100%; height: 100%; margin: 0; padding: 0; overflow: hidden;
-    }
-  </style>
-</head>
-<body>
-  <div id="cesiumContainer"></div>
+<html>
+  <head>
+    <title>Cesium OSM Globe</title>
+    <script src="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Cesium.js"></script>
+    <link href="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 
-  <script src="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Cesium.js"></script>
-  <script>
-    // NO ION TOKEN NEEDED FOR THIS TEST
+    <style>
+      html, body, #cesiumContainer {
+        width: 100%;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+      }
+    </style>
+  </head>
 
-    const viewer = new Cesium.Viewer('cesiumContainer', {
-      baseLayerPicker: false,
-      timeline: false,
-      animation: false
-    });
+  <body>
+    <div id="cesiumContainer"></div>
 
-    // Force Bing Maps satellite layer
-    viewer.imageryLayers.addImageryProvider(
-      new Cesium.BingMapsImageryProvider({
-        url: 'https://dev.virtualearth.net',
-        key: '' // Bing allows some default tile access without a key
-      })
-    );
+    <script>
+      // REQUIRED — your Cesium ion token (free)
+      Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.fake-default-token";
 
-    viewer.imageryLayers.remove(viewer.imageryLayers.get(0)); // remove default black layer
+      // Create the viewer with OSM
+      const viewer = new Cesium.Viewer("cesiumContainer", {
+        baseLayer: Cesium.ImageryLayer.fromProviderAsync(
+          Cesium.createOpenStreetMapImageryProvider({
+            url: "https://tile.openstreetmap.org/"
+          })
+        ),
+        terrainProvider: new Cesium.EllipsoidTerrainProvider(), // no terrain errors
+        animation: false,
+        timeline: false,
+        geocoder: false,
+      });
 
-    // Fly to Earth
-    viewer.camera.flyTo({
-      destination: Cesium.Cartesian3.fromDegrees(0, 0, 25000000)
-    });
-
-  </script>
-</body>
+      viewer.scene.globe.enableLighting = false;
+    </script>
+  </body>
 </html>
