--- a/index.html
+++ b/index.html
@@ -1,42 +1,41 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>Cesium OSM Globe</title>
     <script src="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Cesium.js"></script>
     <link href="https://cesium.com/downloads/cesiumjs/releases/1.108/Build/Cesium/Widgets/widgets.css" rel="stylesheet">
 
     <style>
-      html, body, #cesiumContainer {
-        width: 100%;
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-      }
+        html, body, #cesiumContainer {
+            width: 100%;
+            height: 100%;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+        }
     </style>
-  </head>
+</head>
 
-  <body>
+<body>
     <div id="cesiumContainer"></div>
 
     <script>
-      // REQUIRED — your Cesium ion token (free)
-      Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.fake-default-token";
+        // REQUIRED for CesiumJS
+        Cesium.Ion.defaultAccessToken = "your_token_here";
 
-      // Create the viewer with OSM
-      const viewer = new Cesium.Viewer("cesiumContainer", {
-        baseLayer: Cesium.ImageryLayer.fromProviderAsync(
-          Cesium.createOpenStreetMapImageryProvider({
-            url: "https://tile.openstreetmap.org/"
-          })
-        ),
-        terrainProvider: new Cesium.EllipsoidTerrainProvider(), // no terrain errors
-        animation: false,
-        timeline: false,
-        geocoder: false,
-      });
+        // Standard Cesium viewer
+        const viewer = new Cesium.Viewer("cesiumContainer", {
+            imageryProvider: new Cesium.UrlTemplateImageryProvider({
+                url: "https://tile.openstreetmap.org/{z}/{x}/{y}.png"
+            }),
+            terrainProvider: new Cesium.EllipsoidTerrainProvider(),
+            animation: false,
+            timeline: false,
+            geocoder: false,
+            baseLayerPicker: false
+        });
 
-      viewer.scene.globe.enableLighting = false;
+        viewer.scene.globe.enableLighting = false;
     </script>
-  </body>
+</body>
 </html>
