--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <script>
         // REQUIRED for CesiumJS
-        Cesium.Ion.defaultAccessToken = "your_token_here";
+        Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI2YzI2M2ZiZC02ODQ3LTQzMWYtYTgyNS0zYTY4YzA2ZjYzMjIiLCJpZCI6MzY1MzAwLCJpYXQiOjE3NjQ1Mzc2MjZ9.Fh8NohGnIuUmHU6b76s6eX0CmLJ1hwyNkTlr5HPdz6k";
 
         // Standard Cesium viewer
         const viewer = new Cesium.Viewer("cesiumContainer", {
