--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <script>
         // Your Cesium ion token
-        Cesium.Ion.defaultAccessToken = "YOUR_TOKEN_HERE";
+        Cesium.Ion.defaultAccessToken = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJqdGkiOiI2YzI2M2ZiZC02ODQ3LTQzMWYtYTgyNS0zYTY4YzA2ZjYzMjIiLCJpZCI6MzY1MzAwLCJpYXQiOjE3NjQ1Mzc2MjZ9.Fh8NohGnIuUmHU6b76s6eX0CmLJ1hwyNkTlr5HPdz6k";
 
         // Create viewer
         const viewer = new Cesium.Viewer("cesiumContainer", {
